[package]
name = "tmx_utils"
authors = ["TheMasonX"]
description = "Mostly just an exploration of the Rust language and modern CI/CD practices, but I'll use it to include some common/useful utilities as I write them."
documentation = "https://themasonx.github.io/tmx_utils/"
version = "0.1.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
symbols = false

[dependencies]
cargo-watch = "8.4.0"
itertools = "0.12.0"